was-node-suite-comfyui

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,20 @@ peft>=0.14.0
 numpy>=1.19.0
 huggingface_hub>=0.25.0
 transformers>=4.48.0
+
+#
+cmake
+fairscale>=0.4.4
+git+https://github.com/WASasquatch/img2texture.git
+git+https://github.com/WASasquatch/cstr
+gitpython
+imageio
+joblib
+numba
+opencv-python-headless[ffmpeg]
+pilgram
+git+https://github.com/WASasquatch/ffmpy.git
+rembg
+scikit-image>=0.20.0
+scikit-learn
+timm>=0.4.12
