--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ mss
 
 # ComfyUI_essentials
 colour-science
-pixeloe==0.1.4
+git+https://github.com/pixeloe-ai/pixeloe.git#egg=pixeloe
 transparent-background
                         
 
