--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,39 @@ transparent-background
 
 # ComfyUI_SLK_joy_caption_two
 bitsandbytes>=0.44.1
+
+
+# ComfyUI_LayerStyle
+opencv-contrib-python
+pymatting
+blend_modes
+loguru
+
+
+
+
+
+# comfyui
+# comfyui-frontend-package==1.16.9
+# comfyui-workflow-templates==0.1.3
+# torch
+# torchsde
+# torchvision
+# torchaudio
+# numpy>=1.25.0
+# einops
+# transformers>=4.28.1
+# tokenizers>=0.13.3
+# sentencepiece
+# safetensors>=0.4.2
+# aiohttp>=3.11.8
+# yarl>=1.18.0
+# pyyaml
+# Pillow
+# scipy
+# tqdm
+# psutil
+# kornia>=0.7.1
+# spandrel
+# soundfile
+# av
