--- a/requirements.txt
+++ b/requirements.txt
@@ -75,6 +75,22 @@ spacy
 textblob
 
 
+#comfyui_controlnet_aux
+importlib_metadata
+filelock
+python-dateutil
+mediapipe
+svglib
+fvcore
+yapf
+omegaconf
+ftfy
+addict
+yacs
+trimesh[easy]
+albumentations
+
+
 # comfyui
 # comfyui-frontend-package==1.16.9
 # comfyui-workflow-templates==0.1.3
