--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,10 @@ trimesh[easy]
 albumentations
 
 
+# ComfyUI-VideoHelperSuite
+imageio-ffmpeg
+
+
 # comfyui
 # comfyui-frontend-package==1.16.9
 # comfyui-workflow-templates==0.1.3
