--- a/requirements.txt
+++ b/requirements.txt
@@ -96,6 +96,9 @@ albumentations
 imageio-ffmpeg
 
 
+##https://github.com/ltdrdata/ComfyUI-Impact-Subpack
+ultralytics
+
 # comfyui
 # comfyui-frontend-package==1.16.9
 # comfyui-workflow-templates==0.1.3
