--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 # image to image
-gguf>=0.13.0
+# gguf>=0.13.0
 protobuf>=4.25.3
 
 # matting
-diffusers>=0.32.2
+# diffusers>=0.32.2
 accelerate
 clip_interrogator>=0.6.0
 lark
 onnxruntime
 opencv-python
 matplotlib
-peft>=0.14.0
+# peft>=0.14.0
 numpy>=1.19.0
-huggingface_hub>=0.25.0
+# huggingface_hub>=0.25.0
 transformers>=4.48.0
 
 # was-node-suite-comfyui
@@ -62,7 +62,7 @@ loguru
 segment-anything
 piexif
 dill
-git+https://github.com/facebookresearch/sam2
+# git+https://github.com/facebookresearch/sam2
 
 #Bjornulf_custom_nodes
 openai
@@ -100,6 +100,12 @@ imageio-ffmpeg
 ##https://github.com/ltdrdata/ComfyUI-Impact-Subpack
 ultralytics
 
+# https://github.com/Lightricks/ComfyUI-LTXVideo/tree/master
+huggingface_hub>=0.25.2
+ninja~=1.11.1.4
+transformers[timm]>=4.45.0
+
+
 # comfyui
 # comfyui-frontend-package==1.16.9
 # comfyui-workflow-templates==0.1.3
@@ -124,3 +130,11 @@ ultralytics
 # spandrel
 # soundfile
 # av
+boto3
+transformers==4.51.3
+
+# https://github.com/kijai/ComfyUI-WanVideoWrapper/tree/main
+diffusers>=0.33.0
+peft>=0.15.0
+pyloudnorm
+gguf>=0.14.0
