--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ clip_interrogator>=0.6.0
 lark
 # onnxruntime
 opencv-python
-matplotlib
+matplotlib==3.10.3
 # peft>=0.14.0
 numpy>=1.19.0
 # huggingface_hub>=0.25.0
